[package]
name = "rovkit"
version = "0.0.5"
edition = "2021"

authors = ["xiaqiulei <xiaqiulei@gmail.com>"]
description = "rust kit for my self"
license = "Apache-2.0"
repository = "https://github.com/LiushuiXiaoxia/RovKit"
readme = "README.md"
keywords = ["kit", "rovkit", "rust-kit", "crate"]
categories = ["development-tools"]

[lib]
name = "rovkit"
path = "src/lib.rs"
#proc-macro = true

[dependencies]
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9", optional = true }
tokio = { version = "1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
tempfile = "3.20.0"
sha2 = "0.11.0-rc.0"
base64 = "0.22.1"
hex = "0.4.3"
md5 = "0.8"
uuid = { version = "1.17.0", features = ["v4"] }
rand = { version = "0.8", features = ["default"] }
dotenvy = "0.15"
hostname = "0.4.1"
local-ip-address = "0.5"
sysinfo = { version = "0.30.13", features = ["linux-tmpfs"] }
url = "2.5.4"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
walkdir = "2.3"
aes = "0.8"
cbc = { version = "0.1.2", features = ["block-padding"] }
rsa = { version = "0.9", features = ["pem", "pkcs5"] }

cron = "0.12"
cipher = "0.4.4"
generic-array = "0.14.7"
once_cell = "1.21.3"
dashmap = "6.1.0"
lru = "0.14.0"

[features]
yaml = ["serde_yaml"]